# TNTools_LDPC_Decoder

./: LDPC_decoder.py  README.md  code_gen.py  pyproject.toml  requirements.txt
LDPC_params_results/: batch_params.json  codes_dict_list.json  params_batch_set.py
tntools_ldpc_decoder/: __init__.py  code_gen.py  tntools_ldpc_decoder.py
tntools_ldpc_decoder/example_run/: batch_params.json  eval_search.py  random_code_eval.py  utils.py
tntools_ldpc_decoder/example_run/LDPC_params_results/: codes_gen_params.json  param_dict_list.json
tntools_ldpc_decoder/example_run/num_utils/: utils_funcs.py
