[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tntools_ldpc_decoder"
version = "0.1.0"
description = "Classical LDPC decoder toy library. Proof of concept for the TNTools library."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "tntools>=0.0.0",
    "ldpc_rand_codegen>=0.0.0"
]